# babkin-msu-rng

./: .gitmodules  CMakeLists.txt  README.md  babkin.cpp  babkin.h  main.cpp
babkin/: CMakeLists.txt  babkin.cpp  babkin.h  pascal_triangle.cpp  pascal_triangle.h
check-quality/: CMakeLists.txt  main.cpp
generate-data/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
tests/: CMakeLists.txt  main.cpp
utils/: CMakeLists.txt  utils.cpp  utils.h
